FCOS-Butane: update nomad deploy ignition config

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -5,14 +5,22 @@ version: 1.5.0
 # https://github.com/lancehampton/nomad-on-coreos/blob/main/coreos/ignition/nomad.yaml
 storage:
   directories:
-    - path: /var/home/core/.local/etc/nomad.d
+    - path: /var/home/podmgr/.local/etc/nomad.d
       mode: 0700
       user:
-        id: 1000
+        id: 1001
       group:
-        id: 1000
+        id: 1001
     # nomad data dir
     - path: /var/home/podmgr/.local/opt/nomad
+      mode: 0700
+      user:
+        id: 1001
+      group:
+        id: 1001
+    # nomad plugin dir, Nomad will generate the path using the top-level data_dir suffixed with plugins
+    # https://developer.hashicorp.com/nomad/docs/configuration#plugin_dir
+    - path: /var/home/podmgr/.local/opt/nomad/plugins
       mode: 0700
       user:
         id: 1001
@@ -23,16 +31,45 @@ storage:
       mode: 0644
       contents:
         source: ${nomad_download_url}
-    - path: /var/home/core/.local/etc/nomad.d/ca.crt
+    # Reference: https://developer.hashicorp.com/nomad/plugins/drivers/podman#installation
+    - path: /opt/bin/nomad-driver-podman_${nomad_podman_driver_version}_linux_amd64.zip
+      mode: 0644
+      contents:
+        source: ${nomad_podman_driver_download_url}
+        # source: https://releases.hashicorp.com/nomad-driver-podman/0.6.3/nomad-driver-podman_0.6.3_linux_amd64.zip
+    - path: /var/home/podmgr/.local/etc/nomad.d/ca.crt
       overwrite: true
       user:
-        id: 1000
+        id: 1001
       group:
-        id: 1000
+        id: 1001
       mode: 0600
       contents:
         source: ${ca_download_url}
-    - path: /var/home/core/.local/etc/nomad.d/nomad.hcl
+    - path: /var/home/podmgr/.local/etc/nomad.d/client.pem
+      overwrite: true
+      user:
+        id: 1001
+      group:
+        id: 1001
+      mode: 0600
+      contents:
+        source: ${nomad_client_cert_download_url}
+    - path: /var/home/podmgr/.local/etc/nomad.d/client-key.pem
+      overwrite: true
+      user:
+        id: 1001
+      group:
+        id: 1001
+      mode: 0600
+      contents:
+        source: ${nomad_client_cert_key_download_url}
+    - path: /var/home/podmgr/.local/etc/nomad.d/nomad.hcl
+      overwrite: true
+      user:
+        id: 1001
+      group:
+        id: 1001
       contents:
         inline: |
           client {
@@ -44,65 +81,95 @@ storage:
             }
           }
 
+          consul {
+            address = "{{ GetInterfaceIP \"eth0\" }}:8501"
+            ca_file = "/var/home/podmgr/.local/etc/nomad.d/ca.crt"
+            ssl = true
+            token = "${nomad_consul_acl_token}"
+          }
+
+          data_dir           = "/var/home/podmgr/.local/opt/nomad"
           leave_on_interrupt = true
           leave_on_terminate = true
-          data_dir           = "${nomad_data_dir}"
 
           ports {
-            http = 4746
-            rpc  = 4747
-            serf = 4748
+            http = 4646
+            rpc  = 4647
+            serf = 4648
           }
 
           tls {
             http = true
             rpc  = true
 
-            ca_file   = "${ca_file}"
-            cert_file = "${cert_file}"
-            key_file  = "${key_file}"
+            ca_file   = "/var/home/podmgr/.local/etc/nomad.d/ca.crt"
+            cert_file = "/var/home/podmgr/.local/etc/nomad.d/client.pem"
+            key_file  = "/var/home/podmgr/.local/etc/nomad.d/client-key.pem"
 
             # verify_server_hostname = true
             verify_https_client = true
           }
-    - path: /var/home/core/.config/systemd/user/nomad.service
+
+          # Podman driver plugin configuration
+          # Reference: https://developer.hashicorp.com/nomad/plugins/drivers/podman#plugin-options
+          plugin "nomad-driver-podman" {
+            config {
+              socket_path = "unix:///run/user/1001/podman/podman.sock"
+              volumes {
+                enabled = true
+              }
+            }
+          }
+    - path: /var/home/podmgr/.config/systemd/user/nomad.service
       overwrite: true
       user:
-        id: 1000
+        id: 1001
       group:
-        id: 1000
+        id: 1001
       contents:
         inline: |
           [Unit]
-          Description="HashiCorp nomad - A service mesh solution"
+          Description="Nomad Client Agent"
           Documentation=https://developer.hashicorp.com/
-          Requires=network-online.target
-          After=network-online.target
-          Requires=prepare-nomad-binary.service
-          ConditionFileNotEmpty=/var/home/core/.local/etc/nomad.d/nomad.hcl
+          Wants=podman-user-wait-network-online.service
+          After=podman-user-wait-network-online.service
           ConditionFileNotEmpty=/opt/bin/nomad
+          ConditionFileNotEmpty=/var/home/podmgr/.local/etc/nomad.d/nomad.hcl
+          ConditionPathIsDirectory=/var/home/podmgr/.local/opt/nomad
 
           [Service]
+          # https://developer.hashicorp.com/nomad/commands#environment-variables
+          Environment="NOMAD_ADDR=https://127.0.0.1:4646"
+          Environment="NOMAD_CACERT=/var/home/podmgr/.local/etc/nomad.d/ca.crt"
+          Environment="NOMAD_CLIENT_CERT=/var/home/podmgr/.local/etc/nomad.d/client.pem" 
+          Environment="NOMAD_CLIENT_KEY=/var/home/podmgr/.local/etc/nomad.d/client-key.pem"
+          Environment="NOMAD_TOKEN=${nomad_acl_token}" 
+
+          ExecReload=/bin/kill -HUP $MAINPID
           ExecStart=/opt/bin/nomad agent \
-            -config-dir=/var/home/core/.local/etc/nomad.d \
-            -config-dir=/var/home/core/nomad-services
-          ExecReload=/bin/kill --signal HUP $MAINPID
+            -config /var/home/podmgr/.local/etc/nomad.d/nomad.hcl
+          # https://discuss.hashicorp.com/t/issue-with-nomad-service-restart-node-not-eligible-after-bash-script-execution/63723
+          ExecStartPost = "/bin/bash -c \"sleep $(shuf -i 30-40 -n 1) && /opt/bin/nomad node eligibility -enable -self\""
           KillMode=process
-          KillSignal=SIGTERM
-          Restart=on-failure
+          KillSignal=SIGINT
           LimitNOFILE=65536
+          LimitNPROC=infinity
+          TasksMax=infinity
+          Restart=on-failure
+          RestartSec=2
+          OOMScoreAdjust=-999
 
           [Install]
           WantedBy=default.target
   links:
-    # link the socket in this dir for socket auto start when user login
-    - path: /var/home/core/.config/systemd/user/default.target.wants/nomad.service
-      target: /var/home/core/.config/systemd/user/nomad.service
+    # link the service under default.target.wants for auto start when user login
+    - path: /var/home/podmgr/.config/systemd/user/default.target.wants/nomad.service
+      target: /var/home/podmgr/.config/systemd/user/nomad.service
       overwrite: true
       user:
-        id: 1000
+        id: 1001
       group:
-        id: 1000
+        id: 1001
 systemd:
   units:
     - name: prepare-nomad-binary.service
@@ -116,17 +183,15 @@ systemd:
         Type=oneshot
         Restart=on-failure
         RemainAfterExit=yes
-        Environment=NOMAD_VERSION=1.10.3
-        Environment=PODMAN_DRIVER_VERSION=0.6.3
-        ExecStart=/usr/bin/bsdtar -xf "/opt/bin/nomad_${NOMAD_VERSION}_linux_amd64.zip" -C /opt/bin
-        ExecStart=/usr/bin/bsdtar -xf "/opt/bin/nomad-driver-podman_${PODMAN_DRIVER_VERSION}_linux_amd64.zip" -C /opt/bin
-        ExecStart=/usr/bin/rm "/opt/bin/nomad_${NOMAD_VERSION}_linux_amd64.zip"
-        ExecStart=/usr/bin/rm "/opt/bin/nomad-driver-podman_${PODMAN_DRIVER_VERSION}_linux_amd64.zip"
-        ExecStart=/usr/bin/chmod +x /opt/bin/nomad /opt/bin/nomad-driver-podman
+        ExecStart=/usr/bin/bsdtar -xf "/opt/bin/nomad_${nomad_version}_linux_amd64.zip" -C /opt/bin
+        ExecStart=/usr/bin/bsdtar -xf "/opt/bin/nomad-driver-podman_${nomad_podman_driver_version}_linux_amd64.zip" -C /var/home/podmgr/.local/opt/nomad/plugins
+        ExecStart=/usr/bin/rm "/opt/bin/nomad_${nomad_version}_linux_amd64.zip"
+        ExecStart=/usr/bin/rm "/opt/bin/nomad-driver-podman_${nomad_podman_driver_version}_linux_amd64.zip"
+        ExecStart=/usr/bin/chmod +x /opt/bin/nomad /var/home/podmgr/.local/opt/nomad/plugins/nomad-driver-podman
         # Fix ownership to root:root for proper permissions
-        ExecStart=/usr/bin/chown root:root /opt/bin/nomad /opt/bin/nomad-driver-podman
+        ExecStart=/usr/bin/chown root:root /opt/bin/nomad /var/home/podmgr/.local/opt/nomad/plugins/nomad-driver-podman
         # Fix SELinux contexts for systemd execution
-        ExecStart=/usr/bin/chcon -t bin_t /opt/bin/nomad /opt/bin/nomad-driver-podman
+        ExecStart=/usr/bin/chcon -t bin_t /opt/bin/nomad /var/home/podmgr/.local/opt/nomad/plugins/nomad-driver-podman
 
         [Install]
         WantedBy=multi-user.target
