--- a/LocalWorkShop/SyncTo-Dufs/Day2.jsonc
+++ b/LocalWorkShop/SyncTo-Dufs/Day2.jsonc
@@ -3,17 +3,26 @@
         "publicRegistry": "https://releases.hashicorp.com",
         "publicRepo": "consul/1.21.3/consul_1.21.3_linux_amd64.zip",
         "archive": "consul_1.21.3_linux_amd64.zip",
-        "privateRegistry": "https://dufs.day0.sololab/",
+        "privateRegistry": "https://dufs.day0.sololab",
         "privateRepo": "binaries/consul_1.21.3_linux_amd64.zip",
         "description": "https://releases.hashicorp.com/consul",
     },
     {
-        // https://releases.hashicorp.com/nomad/1.10.3/nomad_1.10.3_linux_amd64.zip
+        // https://releases.hashicorp.com/nomad/1.10.4/nomad_1.10.4_linux_amd64.zip
         "publicRegistry": "https://releases.hashicorp.com",
-        "publicRepo": "nomad/1.10.3/nomad_1.10.3_linux_amd64.zip",
-        "archive": "nomad_1.10.3_linux_amd64.zip",
-        "privateRegistry": "https://dufs.day0.sololab/",
-        "privateRepo": "binaries/nomad_1.10.3_linux_amd64.zip",
+        "publicRepo": "nomad/1.10.4/nomad_1.10.4_linux_amd64.zip",
+        "archive": "nomad_1.10.4_linux_amd64.zip",
+        "privateRegistry": "https://dufs.day0.sololab",
+        "privateRepo": "binaries/nomad_1.10.4_linux_amd64.zip",
+        "description": "https://releases.hashicorp.com/nomad",
+    },
+    {
+        // https://releases.hashicorp.com/nomad-driver-podman/0.6.3/nomad-driver-podman_0.6.3_linux_amd64.zip
+        "publicRegistry": "https://releases.hashicorp.com",
+        "publicRepo": "nomad-driver-podman/0.6.3/nomad-driver-podman_0.6.3_linux_amd64.zip",
+        "archive": "nomad-driver-podman_0.6.3_linux_amd64.zip",
+        "privateRegistry": "https://dufs.day0.sololab",
+        "privateRepo": "binaries/nomad-driver-podman_0.6.3_linux_amd64.zip",
         "description": "https://releases.hashicorp.com/nomad",
     },
 ]
