--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -1,6 +1,14 @@
 [
     {
         "publicRegistry": "quay.io",
+        "publicRepo": "fedora/fedora-coreos:stable",
+        "archive": "quay.io_fedora_fedora-coreos_stable.tar",
+        "privateRegistry": "192.168.255.10:5000",
+        "privateRepo": "fedora/fedora-coreos:stable",
+        "description": "https://quay.io/repository/fedora/fedora-coreos?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
         "publicRepo": "giantswarm/zot:v2.1.7",
         "archive": "quay.io_giantswarm_zot-v2.1.7.tar",
         "privateRegistry": "192.168.255.10:5000",
