FCOS-Butane: add image mirror config, remove unzip,

--- a/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/base.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/base.yaml
@@ -19,6 +19,7 @@ storage:
       contents:
         inline: |
           net.ipv4.ip_unprivileged_port_start = 53
+    # trust custom cert
     - path: /etc/pki/ca-trust/source/anchors/SoloLab-Root-CA.pem
       mode: 0644
       contents:
