--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/packages.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/packages.yaml
@@ -110,6 +110,7 @@ storage:
 systemd:
   units:
     # install packages during ignition process
+    # https://docs.fedoraproject.org/en-US/fedora-coreos/os-extensions/
     # https://github.com/coreos/fedora-coreos-tracker/issues/681#issuecomment-974301872
     - name: rpm-ostree-install.service
       enabled: true
@@ -124,7 +125,13 @@ systemd:
         [Service]
         Type=oneshot
         RemainAfterExit=yes
-        ExecStart=/usr/bin/rpm-ostree install --apply-live --allow-inactive $RPMS
+        # `--allow-inactive` ensures that rpm-ostree does not return an error
+        # if the package is already installed. This is useful if the package is
+        # added to the root image in a future Fedora CoreOS release as it will
+        # prevent the service from failing.
+        ExecStart=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
         ExecStart=/bin/touch /var/lib/%N.stamp
+        ExecStart=/bin/systemctl --no-block reboot
+
         [Install]
         WantedBy=multi-user.target
