nomad-deploy-butane: run nomad/consul as root, mount & store data in new partition

--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/base.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/base.yaml
@@ -27,3 +27,6 @@ storage:
   links:
     - path: /etc/localtime
       target: ../usr/share/zoneinfo/${timezone}
+    # link the socket in this dir for socket auto start after machine boot
+    - path: /etc/systemd/system/sockets.target.wants/podman.socket
+      target: /usr/lib/systemd/system/podman.socket
