--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -47,7 +47,7 @@ storage:
           }
 
           consul {
-            address = "{{ GetInterfaceIP \"eth0\" }}:8501"
+            address = "127.0.0.1:8501"
             ca_file = "/etc/pki/ca-trust/source/anchors/SoloLab-Root-CA.pem"
             ssl = true
             token = "${nomad_consul_acl_token}"
