ssh: add day2 config

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -30,10 +30,10 @@ Host Day1-FCOS
     IdentityFile ~/.ssh/vagrant
     Port 22
 
-Host InfSvc-Alpine
+Host Day2-FCOS
     StrictHostKeyChecking no
-    HostName 192.168.255.21
-    User vagrant
+    HostName 192.168.255.30
+    User podmgr
     IdentityFile ~/.ssh/vagrant
     Port 22
 
