--- a/TerraformWorkShop/Nomad/Job/traefik/attachments/static.traefik.yml
+++ b/TerraformWorkShop/Nomad/Job/traefik/attachments/static.traefik.yml
@@ -51,9 +51,9 @@ providers:
     endpoint: unix:///var/run/docker.sock
     exposedByDefault: false
     useBindPortIP: false
-  file:
-    directory: /etc/traefik/dynamic
-    watch: true
+  # file:
+  #   directory: /etc/traefik/dynamic
+  #   watch: true
 serversTransport:
   insecureSkipVerify: false
   rootCAs:
